{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 2162,
  "lineage": "5977d7ee-f41d-8bb9-b7b0-7b8576b9a1a7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "konvoy_control_plane",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:337834004759:loadbalancer/tf-lb-2022112903411325240000000f",
            "availability_zones": [
              "us-west-2c"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-lb-2022112903411325240000000f-1917374765.us-west-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 10,
                "target": "HTTPS:6443/healthz",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "tf-lb-2022112903411325240000000f",
            "idle_timeout": 60,
            "instances": [
              "i-0024148ed3bfe0741",
              "i-03cdec178869f3630",
              "i-04b4b030dc7f56c06"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 6443,
                "instance_protocol": "tcp",
                "lb_port": 6443,
                "lb_protocol": "tcp"
              }
            ],
            "name": "tf-lb-2022112903411325240000000f",
            "security_groups": [
              "sg-009d6f00f62a50931",
              "sg-0ce004d72228cb9bf"
            ],
            "source_security_group": "337834004759/terraform-20221129034005528900000001",
            "source_security_group_id": "sg-0ce004d72228cb9bf",
            "subnets": [
              "subnet-04dddd6af1e99abb5"
            ],
            "tags": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "tags_all": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_instance.control_plane",
            "aws_security_group.konvoy_control_plane",
            "aws_security_group.konvoy_egress",
            "aws_security_group.konvoy_private",
            "aws_security_group.konvoy_ssh",
            "aws_subnet.konvoy_public",
            "aws_vpc.konvoy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e87ed6656c4945c7",
            "arn": "arn:aws:ec2:us-west-2:337834004759:instance/i-093b1ece866e02db8",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-093b1ece866e02db8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "alex-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b4bce7115ffb104b",
            "private_dns": "ip-10-0-57-2.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.57.2",
            "public_dns": "ec2-34-221-242-215.us-west-2.compute.amazonaws.com",
            "public_ip": "34.221.242.215",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-054732d0a3035c434",
                "volume_size": 80,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-04dddd6af1e99abb5",
            "tags": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "tags_all": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-009d6f00f62a50931",
              "sg-0103f2f84feedc29b",
              "sg-01feb540fd5a1322d"
            ]
          },
          "dependencies": [
            "aws_security_group.konvoy_egress",
            "aws_security_group.konvoy_private",
            "aws_security_group.konvoy_ssh",
            "aws_subnet.konvoy_public",
            "aws_vpc.konvoy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "control_plane",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e87ed6656c4945c7",
            "arn": "arn:aws:ec2:us-west-2:337834004759:instance/i-03cdec178869f3630",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03cdec178869f3630",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "alex-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0715af88c3686187b",
            "private_dns": "ip-10-0-2-31.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.31",
            "public_dns": "ec2-54-201-37-96.us-west-2.compute.amazonaws.com",
            "public_ip": "54.201.37.96",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ecc17741bbfab5f3",
                "volume_size": 80,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-04dddd6af1e99abb5",
            "tags": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "tags_all": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-009d6f00f62a50931",
              "sg-0103f2f84feedc29b",
              "sg-01feb540fd5a1322d"
            ]
          },
          "dependencies": [
            "aws_security_group.konvoy_egress",
            "aws_security_group.konvoy_private",
            "aws_security_group.konvoy_ssh",
            "aws_subnet.konvoy_public",
            "aws_vpc.konvoy_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e87ed6656c4945c7",
            "arn": "arn:aws:ec2:us-west-2:337834004759:instance/i-04b4b030dc7f56c06",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04b4b030dc7f56c06",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "alex-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-003d5d20846fbca1a",
            "private_dns": "ip-10-0-91-171.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.91.171",
            "public_dns": "ec2-54-218-63-110.us-west-2.compute.amazonaws.com",
            "public_ip": "54.218.63.110",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e952fcf4e53e89fb",
                "volume_size": 80,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-04dddd6af1e99abb5",
            "tags": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "tags_all": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-009d6f00f62a50931",
              "sg-0103f2f84feedc29b",
              "sg-01feb540fd5a1322d"
            ]
          },
          "dependencies": [
            "aws_security_group.konvoy_egress",
            "aws_security_group.konvoy_private",
            "aws_security_group.konvoy_ssh",
            "aws_subnet.konvoy_public",
            "aws_vpc.konvoy_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e87ed6656c4945c7",
            "arn": "arn:aws:ec2:us-west-2:337834004759:instance/i-0024148ed3bfe0741",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0024148ed3bfe0741",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "alex-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0acd2bd25979c9d89",
            "private_dns": "ip-10-0-65-19.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.65.19",
            "public_dns": "ec2-54-202-55-184.us-west-2.compute.amazonaws.com",
            "public_ip": "54.202.55.184",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0cc0fbfb235ce9039",
                "volume_size": 80,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-04dddd6af1e99abb5",
            "tags": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "tags_all": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-009d6f00f62a50931",
              "sg-0103f2f84feedc29b",
              "sg-01feb540fd5a1322d"
            ]
          },
          "dependencies": [
            "aws_security_group.konvoy_egress",
            "aws_security_group.konvoy_private",
            "aws_security_group.konvoy_ssh",
            "aws_subnet.konvoy_public",
            "aws_vpc.konvoy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "registry_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e87ed6656c4945c7",
            "arn": "arn:aws:ec2:us-west-2:337834004759:instance/i-05010938a046ccba4",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05010938a046ccba4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "alex-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f955b537ec0e1cd4",
            "private_dns": "ip-10-0-171-236.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.171.236",
            "public_dns": "ec2-34-222-254-213.us-west-2.compute.amazonaws.com",
            "public_ip": "34.222.254.213",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ab285a249bfb41ed",
                "volume_size": 80,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-04dddd6af1e99abb5",
            "tags": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "tags_all": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00094e39c69d993a8",
              "sg-009d6f00f62a50931",
              "sg-0103f2f84feedc29b",
              "sg-01feb540fd5a1322d"
            ]
          },
          "dependencies": [
            "aws_security_group.konvoy_egress",
            "aws_security_group.konvoy_private",
            "aws_security_group.konvoy_ssh",
            "aws_security_group.public_facing_instances",
            "aws_subnet.konvoy_public",
            "aws_vpc.konvoy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e87ed6656c4945c7",
            "arn": "arn:aws:ec2:us-west-2:337834004759:instance/i-0fa74cb45e27d9d7d",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fa74cb45e27d9d7d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "alex-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00b0ee2869037fd98",
            "private_dns": "ip-10-0-144-166.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.144.166",
            "public_dns": "ec2-35-92-254-186.us-west-2.compute.amazonaws.com",
            "public_ip": "35.92.254.186",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0fbc9f40b0d977274",
                "volume_size": 80,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-04dddd6af1e99abb5",
            "tags": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "tags_all": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00094e39c69d993a8",
              "sg-009d6f00f62a50931",
              "sg-0103f2f84feedc29b",
              "sg-01feb540fd5a1322d"
            ]
          },
          "dependencies": [
            "aws_security_group.konvoy_egress",
            "aws_security_group.konvoy_private",
            "aws_security_group.konvoy_ssh",
            "aws_security_group.public_facing_instances",
            "aws_subnet.konvoy_public",
            "aws_vpc.konvoy_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e87ed6656c4945c7",
            "arn": "arn:aws:ec2:us-west-2:337834004759:instance/i-0fcd0bc9b784a364c",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fcd0bc9b784a364c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "alex-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03cf85faa9abb7092",
            "private_dns": "ip-10-0-102-43.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.102.43",
            "public_dns": "ec2-34-216-178-156.us-west-2.compute.amazonaws.com",
            "public_ip": "34.216.178.156",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0eb52d13eded12331",
                "volume_size": 80,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-04dddd6af1e99abb5",
            "tags": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "tags_all": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00094e39c69d993a8",
              "sg-009d6f00f62a50931",
              "sg-0103f2f84feedc29b",
              "sg-01feb540fd5a1322d"
            ]
          },
          "dependencies": [
            "aws_security_group.konvoy_egress",
            "aws_security_group.konvoy_private",
            "aws_security_group.konvoy_ssh",
            "aws_security_group.public_facing_instances",
            "aws_subnet.konvoy_public",
            "aws_vpc.konvoy_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e87ed6656c4945c7",
            "arn": "arn:aws:ec2:us-west-2:337834004759:instance/i-0f648598447c6b700",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f648598447c6b700",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "alex-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08a612b3f8a7244e5",
            "private_dns": "ip-10-0-51-252.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.51.252",
            "public_dns": "ec2-54-213-169-189.us-west-2.compute.amazonaws.com",
            "public_ip": "54.213.169.189",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ab0a90010bbd3d40",
                "volume_size": 80,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-04dddd6af1e99abb5",
            "tags": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "tags_all": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00094e39c69d993a8",
              "sg-009d6f00f62a50931",
              "sg-0103f2f84feedc29b",
              "sg-01feb540fd5a1322d"
            ]
          },
          "dependencies": [
            "aws_security_group.konvoy_egress",
            "aws_security_group.konvoy_private",
            "aws_security_group.konvoy_ssh",
            "aws_security_group.public_facing_instances",
            "aws_subnet.konvoy_public",
            "aws_vpc.konvoy_vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e87ed6656c4945c7",
            "arn": "arn:aws:ec2:us-west-2:337834004759:instance/i-0a3deee419782121b",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a3deee419782121b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "alex-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e804dfac17119366",
            "private_dns": "ip-10-0-152-234.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.152.234",
            "public_dns": "ec2-34-209-84-33.us-west-2.compute.amazonaws.com",
            "public_ip": "34.209.84.33",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0199872d3b7b66461",
                "volume_size": 80,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-04dddd6af1e99abb5",
            "tags": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "tags_all": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00094e39c69d993a8",
              "sg-009d6f00f62a50931",
              "sg-0103f2f84feedc29b",
              "sg-01feb540fd5a1322d"
            ]
          },
          "dependencies": [
            "aws_security_group.konvoy_egress",
            "aws_security_group.konvoy_private",
            "aws_security_group.konvoy_ssh",
            "aws_security_group.public_facing_instances",
            "aws_subnet.konvoy_public",
            "aws_vpc.konvoy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "konvoy_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:337834004759:internet-gateway/igw-025317c634a4c87b3",
            "id": "igw-025317c634a4c87b3",
            "owner_id": "337834004759",
            "tags": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "tags_all": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "vpc_id": "vpc-0632b86c5d3d1f857"
          },
          "dependencies": [
            "aws_vpc.konvoy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "konvoy_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:337834004759:route-table/rtb-0c268e725d2cf3ac1",
            "id": "rtb-0c268e725d2cf3ac1",
            "owner_id": "337834004759",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-025317c634a4c87b3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "tags_all": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "timeouts": null,
            "vpc_id": "vpc-0632b86c5d3d1f857"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.konvoy_gateway",
            "aws_vpc.konvoy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "konvoy_public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-037e915b79535d6b5",
            "route_table_id": "rtb-0c268e725d2cf3ac1",
            "subnet_id": "subnet-04dddd6af1e99abb5"
          },
          "dependencies": [
            "aws_internet_gateway.konvoy_gateway",
            "aws_route_table.konvoy_public_rt",
            "aws_subnet.konvoy_public",
            "aws_vpc.konvoy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "konvoy_control_plane",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:337834004759:security-group/sg-0ce004d72228cb9bf",
            "description": "Allow inbound 6443 for CP.",
            "egress": [],
            "id": "sg-0ce004d72228cb9bf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              }
            ],
            "name": "terraform-20221129034005528900000001",
            "name_prefix": "terraform-",
            "owner_id": "337834004759",
            "revoke_rules_on_delete": false,
            "tags": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "tags_all": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "timeouts": null,
            "vpc_id": "vpc-0632b86c5d3d1f857"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.konvoy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "konvoy_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:337834004759:security-group/sg-01feb540fd5a1322d",
            "description": "Allow all egress communication.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01feb540fd5a1322d",
            "ingress": [],
            "name": "terraform-20221129034005529100000002",
            "name_prefix": "terraform-",
            "owner_id": "337834004759",
            "revoke_rules_on_delete": false,
            "tags": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "tags_all": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "timeouts": null,
            "vpc_id": "vpc-0632b86c5d3d1f857"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.konvoy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "konvoy_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:337834004759:security-group/sg-009d6f00f62a50931",
            "description": "Allow all communication between instances",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-009d6f00f62a50931",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "terraform-20221129034005532200000005",
            "name_prefix": "terraform-",
            "owner_id": "337834004759",
            "revoke_rules_on_delete": false,
            "tags": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "tags_all": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "timeouts": null,
            "vpc_id": "vpc-0632b86c5d3d1f857"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.konvoy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "konvoy_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:337834004759:security-group/sg-0103f2f84feedc29b",
            "description": "Allow inbound SSH for Konvoy.",
            "egress": [],
            "id": "sg-0103f2f84feedc29b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20221129034005529400000003",
            "name_prefix": "terraform-",
            "owner_id": "337834004759",
            "revoke_rules_on_delete": false,
            "tags": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "tags_all": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "timeouts": null,
            "vpc_id": "vpc-0632b86c5d3d1f857"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.konvoy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_facing_instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:337834004759:security-group/sg-00094e39c69d993a8",
            "description": "Allow inbound http and https for public facing instances.",
            "egress": [],
            "id": "sg-00094e39c69d993a8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20221129034005531800000004",
            "name_prefix": "terraform-",
            "owner_id": "337834004759",
            "revoke_rules_on_delete": false,
            "tags": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "tags_all": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "timeouts": null,
            "vpc_id": "vpc-0632b86c5d3d1f857"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.konvoy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "konvoy_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:337834004759:subnet/subnet-04dddd6af1e99abb5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.0.0/16",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04dddd6af1e99abb5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "337834004759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "tags_all": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "vpc_id": "vpc-0632b86c5d3d1f857"
          },
          "dependencies": [
            "aws_vpc.konvoy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "konvoy_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:337834004759:vpc/vpc-0632b86c5d3d1f857",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e15761dada274570",
            "default_route_table_id": "rtb-0eb6874ecc6d12d9a",
            "default_security_group_id": "sg-0d279ab82795fcdad",
            "dhcp_options_id": "dopt-36131d50",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0632b86c5d3d1f857",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0eb6874ecc6d12d9a",
            "owner_id": "337834004759",
            "tags": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "tags_all": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            }
          }
        }
      ]
    }
  ]
}